--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-todo</title>
+    <meta charset="utf-8"/>
+    <title>Vue todo</title>
+    <meta name="description" content="Simple Vue.js todo list."/>
+    <meta name="keywords" content="vue, todo"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta http-equiv="cleartype" content="on" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="application-name" content="Vue todo"/>
+    <!--[if IE]>
+    <meta http-equiv="imagetoolbar" content="no"/>
+    <meta http-equiv="MSThemeCompatible" content="no"/>
+    <![endif]-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00c8aa"/>
+    <meta name="msapplication-tooltip" content="Simple Vue.js todo list."/>
+    <meta name="msapplication-navbutton-color" content="#00c8aa" />
+    <meta name="msapplication-TileColor" content="#00c8aa"/>
+    <meta name="msapplication-TileImage" content="mstile-144x144.png">
+    <meta name="theme-color" content="#00c8aa">
+    <meta property="og:title" content="Vue todo"/>
+    <meta property="og:description" content="Simple Vue.js todo list."/>
+    <meta property="og:type" content="website"/>
   </head>
   <body>
     <div id="app"></div>
